move hero js logic to html

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 
     <!-- Preloads -->
     <link rel="preload" href="img/logo-content.svg" as="image">
-    <link rel="preload" href="img/home-mobile-placeholder.webp" as="image" media="(max-width: 768px)">
-    <link rel="preload" href="img/home-desktop-placeholder.webp" as="image" media="(min-width: 769px)">
     <link rel="preload" href="img/scroll-down.svg?v=2" as="image">
+    <script>
+        // Add this before preload links to determine which image to preload
+        const isMobile = window.innerWidth <= 768;
+        const preloadLink = document.createElement('link');
+        preloadLink.rel = 'preload';
+        preloadLink.as = 'image';
+        preloadLink.href = isMobile ? 'img/home-mobile-placeholder.webp' : 'img/home-desktop-placeholder.webp';
+        document.head.appendChild(preloadLink);
+    </script>
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css?v=2">
     <link rel="stylesheet" href="src/lite-yt-embed.css">
@@ -78,6 +86,51 @@
                     data-src-desktop="img/home-desktop-full.webp"
                     data-placeholder-mobile="img/home-mobile-placeholder.webp"
                     data-placeholder-desktop="img/home-desktop-placeholder.webp">
+                <script>
+                    (function () {
+                        const parallaxImg = document.querySelector('.parallax-img');
+                        if (!parallaxImg) return;
+
+                        const isMobile = () => window.innerWidth <= 768;
+
+                        // Determine URLs
+                        const placeholderSrc = isMobile()
+                            ? parallaxImg.dataset.placeholderMobile
+                            : parallaxImg.dataset.placeholderDesktop;
+
+                        const highResSrc = isMobile()
+                            ? parallaxImg.dataset.srcMobile
+                            : parallaxImg.dataset.srcDesktop;
+
+                        // Only proceed if a placeholder URL exists
+                        if (!placeholderSrc) return;
+
+                        // Use preloader for placeholder
+                        const placeholderImage = new Image();
+
+                        placeholderImage.onload = () => {
+                            // 1. Apply placeholder to the actual img tag
+                            parallaxImg.src = placeholderImage.src;
+                            // 2. Add class now that placeholder is ready (for CSS transitions)
+                            parallaxImg.classList.add('loaded');
+
+                            // 3. Start loading high-res if it exists
+                            if (highResSrc) {
+                                const highResImage = new Image();
+                                highResImage.onload = () => {
+                                    // 4. Swap src when high-res is loaded
+                                    parallaxImg.src = highResImage.src;
+                                };
+                                // Start high-res download
+                                highResImage.src = highResSrc;
+                            }
+                        };
+
+                        // Start placeholder download
+                        placeholderImage.src = placeholderSrc;
+
+                    })();
+                </script>
             </div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
