--- a/index.html
+++ b/index.html
@@ -27,8 +27,431 @@
         document.head.appendChild(preloadLink);
     </script>
 
+    <!-- Inline styles -->
+    <style>
+        /* --- Basic Resets & Globals --- */
+        *,
+        *::before,
+        *::after {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        :root {
+            /* Include ONLY variables used by critical styles below */
+            --primary-color: #663399;
+            --primary-color-dark: #33194d;
+            /* Used in contact button */
+            --accent-color: #bb9413;
+            --accent-color-bright: #f7bd00;
+            /* Used in contact button */
+            --background-color: rgb(0, 0, 0);
+            --text-color: #f3f3f3;
+            --text-color-secondary: #919191;
+            /* Used in scroll-down */
+            --border-radius: 0.5rem;
+            --box-shadow-cta: 0px 4px 8px -4px white;
+            --transition-duration-fast: 0.25s;
+            /* For parallax image fade-in */
+            --linear-gradient: linear-gradient(90deg, var(--background-color) 60%, #2f075a);
+            /* Navbar background */
+            --linear-gradient-text-primary: linear-gradient(90deg, transparent 20%, hsla(270, 51%, 20%, 0.527) 50%, transparent 80%);
+            /* Hero text background */
+            --viewport-width-desktop: 1600px;
+            --viewport-width-mobile: 768px;
+            /* --clicked-feedback-time: 0.05s; */
+            /* Defer unless needed for layout */
+        }
+
+        body {
+            font-family: Verdana, Geneva, Tahoma, sans-serif, 'Times New Roman', Times, serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--background-color);
+        }
+
+        /* body.no-scroll { overflow: hidden; } */
+        /* Defer - only needed when menu open */
+
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        a {
+            display: inline-block;
+            color: var(--accent-color);
+            text-decoration: none;
+        }
+
+        h1 {
+            font-size: 6rem;
+            line-height: 1.2;
+        }
+
+        /* --- Layout Container --- */
+        .container-full {
+            display: flex;
+            flex-direction: column;
+            margin-top: 4.5rem;
+            min-height: calc(100vh - 5rem);
+            max-width: var(--viewport-width-desktop);
+            position: relative;
+            margin-inline: auto;
+            border-radius: var(--border-radius);
+            padding: 1rem;
+            overflow: hidden;
+        }
+
+        /* --- Navbar --- */
+        .navbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-inline: 1rem;
+            padding-block: 0.2rem;
+            background: var(--linear-gradient);
+            position: fixed;
+            top: 0.5rem;
+            left: 0;
+            right: 0;
+            margin-inline: auto;
+            width: calc(100% - 1rem);
+            max-width: calc(1400px - 3rem);
+            z-index: 1001;
+            border-radius: var(--border-radius);
+            overflow: hidden;
+        }
+
+        /* .navbar.scrolled { box-shadow: ...; } */
+        /* Defer */
+        /* .navbar-overlay { ... } */
+        /* Defer - only needed when menu open */
+
+        #logo-header {
+            z-index: 1002;
+        }
+
+        #logo-header img {
+            height: 3rem;
+            width: 3rem;
+            position: relative;
+        }
+
+        /* Desktop Nav Links */
+        .nav-links {
+            display: flex;
+            align-items: flex-end;
+            list-style: none;
+            white-space: nowrap;
+        }
+
+        .nav-links a {
+            font-size: 1.2rem;
+            color: var(--text-color);
+            font-weight: bold;
+            padding: 0.5rem;
+            margin-inline: 0.5rem;
+            text-decoration: none;
+        }
+
+        /* Mobile Nav Toggle (Hidden initially on desktop) */
+        .nav-toggle {
+            display: none;
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            width: 3rem;
+            height: 3rem;
+            z-index: 1001;
+            padding: 0.5rem;
+        }
+
+        .nav-svg {
+            width: 100%;
+            height: 100%;
+        }
+
+        .nav-svg-line {
+            stroke: var(--text-color);
+            stroke-width: 12;
+            stroke-dasharray: 60 31 60 300;
+        }
+
+        /* .nav-toggle.expanded ... */
+        /* Defer */
+
+        /* --- Hero Section (#home) --- */
+        #home {
+            position: relative;
+            z-index: 0;
+            text-align: center;
+        }
+
+        /* overflow: hidden; is on container-full */
+
+        .parallax-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+            background-color: var(--background-color);
+            /* Fallback bg */
+        }
+
+        .parallax-img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0;
+            /* Start hidden */
+            transition: opacity var(--transition-duration-fast) ease;
+            /* Fade-in */
+            /* will-change: transform, opacity; */
+            /* Defer */
+        }
+
+        .parallax-img.loaded {
+            opacity: 0.8;
+        }
+
+        .home-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 9rem;
+            flex-grow: 1;
+        }
+
+        .home-container p:first-of-type {
+            /* Subtitle */
+            font-size: 2rem;
+            background: var(--linear-gradient-text-primary);
+            padding: 0.5rem;
+            margin-block: 2rem;
+        }
+
+        .home-container p:last-of-type {
+            font-size: 1.2rem;
+            background: var(--linear-gradient-text-primary);
+            padding: 0.5rem;
+            font-style: italic;
+        }
+
+        #typed-quote {
+            /* Typing quote placeholder */
+            font-size: 1.2rem;
+            padding: 0.5rem;
+            font-style: italic;
+            min-height: 5rem;
+            /* Reserve space */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-block: 1rem;
+            border-radius: var(--border-radius);
+            width: 80%;
+            max-width: 600px;
+            margin-inline: auto;
+            color: var(--text-color);
+        }
+
+        /* .typing { ... } */
+        /* Assume covered by #typed-quote */
+
+        #cta {
+            /* Call to Action Button */
+            margin-top: 4rem;
+            display: inline-block;
+            padding: 0.5rem;
+            background-color: #451d6d;
+            color: white;
+            text-decoration: none;
+            border-radius: var(--border-radius);
+            font-size: 1rem;
+            font-weight: bold;
+            font-style: italic;
+            box-shadow: var(--box-shadow-cta);
+        }
+
+        .scroll-down {
+            /* Scroll Indicator */
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 3rem;
+            margin-inline: auto;
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            animation: float 2s ease-in-out infinite;
+            z-index: 2;
+        }
+
+        .scroll-down img {
+            width: 2.5rem;
+            height: 2.5rem;
+        }
+
+        .scroll-down p {
+            font-size: 0.8rem;
+            color: var(--text-color-secondary);
+        }
+
+        @keyframes float {
+
+            /* Keep animation */
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        /* --- Floating Contact Button (Visible State) --- */
+        .floating-contact-button {
+            position: fixed;
+            bottom: 2rem;
+            left: 12%;
+            font-size: 1rem;
+            padding: 0.5rem;
+            z-index: 80;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            color: var(--text-color);
+            /* Or black if text is always black */
+            background-color: var(--accent-color-bright);
+            border-radius: var(--border-radius);
+            border: none;
+            min-width: 120px;
+            /* Or appropriate min-width */
+            /* overflow: hidden; */
+            user-select: none;
+            transition: background-color var(--clicked-feedback-time) ease, transform var(--clicked-feedback-time) ease;
+        }
+
+        .contact-text {
+            /* Desktop text */
+            white-space: nowrap;
+            color: black;
+            font-weight: bold;
+            /* display: inline; */
+            /* Default */
+        }
+
+        .contact-text-short {
+            /* Mobile text */
+            color: black;
+            font-weight: bold;
+            display: none;
+            /* Hidden by default */
+        }
+
+        .contact-icon {
+            height: 1rem;
+            width: 1rem;
+            margin-left: 0.1rem;
+            /* transition: transform ...; */
+            /* Defer */
+        }
+
+        .contact-menu-container {
+            position: absolute;
+            bottom: 110%;
+            /* Align with the button's bottom */
+            left: 0;
+            width: 100%;
+            overflow: hidden;
+            pointer-events: none;
+        }
+
+        .contact-menu a {
+            opacity: 0;
+        }
+
+        /* Styles for .contact-menu-container, .contact-menu, .open state are DEFERRED */
+
+        /* --- Mobile Overrides --- */
+        @media (max-width: 768px) {
+            :root {
+                --border-radius: 0.4rem;
+            }
+
+            h1 {
+                font-size: 3rem;
+            }
+
+            .home-container p:first-of-type {
+                font-size: 1.5rem;
+                margin-block: 1rem;
+            }
+
+            .home-container p:last-of-type {
+                font-size: 1rem;
+            }
+
+            #typed-quote {
+                font-size: 1rem;
+            }
+
+            .container-full {
+                max-width: var(--viewport-width-mobile);
+            }
+
+            /* Swap Nav Links and Toggle */
+            .nav-toggle {
+                display: flex;
+            }
+
+            .nav-links {
+                display: none;
+            }
+
+            /* .nav-links.open { ... } */
+            /* Defer */
+
+            .scroll-down img {
+                width: 2rem;
+                height: 2rem;
+            }
+
+            /* Contact Button Text Swap */
+            .floating-contact-button {
+                left: 2rem;
+            }
+
+            /* Adjust mobile position */
+            .contact-text {
+                display: none;
+            }
+
+            .contact-text-short {
+                display: inline;
+            }
+        }
+    </style>
+
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles.css?v=3">
+
+    <link rel="preload" href="styles.css?v=3" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="styles.css?v=3">
+    </noscript>
     <link rel="stylesheet" href="src/lite-yt-embed.css">
     <!-- Scripts -->
     <script src="script.js?v=3" defer></script>
