remove unnecessary css

--- a/index.html
+++ b/index.html
@@ -416,6 +416,8 @@
             /* Swap Nav Links and Toggle */
             .nav-toggle {
                 display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .nav-links {
