fix layout shift on mobile

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" href="img/logo-content.svg?v=5" as="image">
-    <link rel="preload" href="img/scroll-down.svg?v=5" as="image">
+    <link rel="preload" href="img/logo-content.svg?v=6" as="image">
+    <link rel="preload" href="img/scroll-down.svg?v=6" as="image">
     <script>
         // Add this before preload links to determine which image to preload
         const isMobile = window.innerWidth <= 768;
@@ -384,6 +384,37 @@
             opacity: 0;
         }
 
+
+        .contact-menu {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .contact-menu li {
+            white-space: nowrap;
+            margin-top: 0.2rem;
+        }
+
+        .contact-menu a {
+            text-decoration: none;
+            color: var(--text-color);
+            display: flex;
+            align-items: center;
+            background-color: var(--primary-color-dark);
+            border-radius: var(--border-radius);
+            height: 2.5rem;
+            padding-inline: 0.5rem;
+            opacity: 0;
+        }
+
+        .contact-menu img {
+            height: 1.5rem;
+            width: 1.5rem;
+            /* padding: 0.2rem; */
+            margin-right: 0.5rem;
+        }
+
         /* Styles for .contact-menu-container, .contact-menu, .open state are DEFERRED */
 
         /* --- Mobile Overrides --- */
@@ -450,16 +481,16 @@
 
     <!-- Stylesheets -->
 
-    <link rel="preload" href="styles.css?v=5" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="styles.css?v=6" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="stylesheet" href="styles.css?v=5">
+        <link rel="stylesheet" href="styles.css?v=6">
     </noscript>
     <link rel="preload" href="src/lite-yt-embed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="src/lite-yt-embed.css">
     </noscript>
     <!-- Scripts -->
-    <script src="script.js?v=5" defer></script>
+    <script src="script.js?v=6" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
         content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
@@ -472,7 +503,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar">
             <a href="#home" id="logo-header">
-                <img src="img/logo-content.svg?v=5" alt="La Casa de Grei логотип">
+                <img src="img/logo-content.svg?v=6" alt="La Casa de Grei логотип">
             </a>
             <ul class="nav-links">
                 <li><a href="#about">О Нас</a></li>
@@ -601,7 +632,7 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg?v=5" alt="Прокрутить вниз">
+                <img src="img/scroll-down.svg?v=6" alt="Прокрутить вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
@@ -622,7 +653,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp?v=5" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                        <img src="img/male-teacher.webp?v=6" alt="Инструктор по танцам Грейсьер" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
@@ -639,7 +670,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp?v=5" alt="Инструктор по танцам Аньель" loading="lazy"
+                        <img src="img/female-teacher.webp?v=6" alt="Инструктор по танцам Аньель" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
@@ -670,7 +701,7 @@
                         <img src="img/festival-placeholder.webp" alt="Участие в фестивале латиноамериканской культуры в
                         Минске" loading="lazy" class="lazy-load">
                     </div>
-                    <a href="https://www.youtube.com/watch?v=5m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
+                    <a href="https://www.youtube.com/watch?v=6m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
                     </a>
                 </lite-youtube>
                 <div class="carousel">
@@ -689,37 +720,37 @@
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub1.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub1.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub2.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub2.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub3.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub3.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub4.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub4.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub5.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub5.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub6.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub6.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub7.webp?v=5" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub7.webp?v=6" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
