change styles pictures

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.webp" alt="Иконка Сальса" loading="lazy" class="lazy-load">
+                            <img src="img/salsa.webp?v=6" alt="Иконка Сальса" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
@@ -782,14 +782,14 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.webp" alt="Иконка Бачата" loading="lazy" class="lazy-load">
+                            <img src="img/bachata.webp?v=6" alt="Иконка Бачата" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latina.webp" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
+                            <img src="img/latina.webp?v=6" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
@@ -797,7 +797,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
-                            <img src="img/kizomba.webp" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                            <img src="img/kizomba.webp?v=6" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Кизомба</h3>
                         <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
