fix map locations due to precaching

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" as="image" href="img/logo-content.svg?v=8" type="image/svg+xml">
-    <link rel="preload" as="image" href="img/scroll-down.svg?v=8" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/logo-content.svg?v=9" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/scroll-down.svg?v=9" type="image/svg+xml">
 
     <script>
         // Add this before preload links to determine which image to preload
@@ -478,9 +478,9 @@
     <!-- Stylesheets -->
 
 
-    <link rel="preload" href="styles.css?v=8" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="styles.css?v=9" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="stylesheet" href="styles.css?v=8">
+        <link rel="stylesheet" href="styles.css?v=9">
     </noscript>
     <link rel="preload" href="src/lite-yt-embed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -488,7 +488,7 @@
     </noscript>
 
     <!-- Scripts -->
-    <script src="script.js?v=8" defer></script>
+    <script src="script.js?v=9" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
         content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
@@ -501,7 +501,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar">
             <a href="#home" id="logo-header">
-                <img src="img/logo-content.svg?v=8" alt="La Casa de Grei логотип">
+                <img src="img/logo-content.svg?v=9" alt="La Casa de Grei логотип">
             </a>
             <ul class="nav-links">
                 <li><a href="#about">О Нас</a></li>
@@ -630,7 +630,7 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg?v=8" alt="Прокрутить вниз">
+                <img src="img/scroll-down.svg?v=9" alt="Прокрутить вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
@@ -651,7 +651,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp?v=8" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                        <img src="img/male-teacher.webp?v=9" alt="Инструктор по танцам Грейсьер" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
@@ -668,7 +668,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp?v=8" alt="Инструктор по танцам Аньель" loading="lazy"
+                        <img src="img/female-teacher.webp?v=9" alt="Инструктор по танцам Аньель" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
@@ -718,37 +718,37 @@
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub1.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub1.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub2.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub2.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub3.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub3.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub4.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub4.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub5.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub5.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub6.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub6.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub7.webp?v=8" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub7.webp?v=9" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
@@ -772,7 +772,7 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.webp?v=8" alt="Иконка Сальса" loading="lazy" class="lazy-load">
+                            <img src="img/salsa.webp?v=9" alt="Иконка Сальса" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
@@ -780,14 +780,14 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.webp?v=8" alt="Иконка Бачата" loading="lazy" class="lazy-load">
+                            <img src="img/bachata.webp?v=9" alt="Иконка Бачата" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latina.webp?v=8" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
+                            <img src="img/latina.webp?v=9" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
@@ -795,7 +795,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
-                            <img src="img/kizomba.webp?v=8" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                            <img src="img/kizomba.webp?v=9" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Кизомба</h3>
                         <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
@@ -1123,7 +1123,7 @@
                 <div class="contact-locations">
                     <div class="image-placeholder" aria-label="Расположение танцевальных студий">
                         <img src="img/map.webp" alt="Расположение танцевальных студий" usemap="#map-directions"
-                            loading="lazy">
+                            width="1400" height="882" loading="lazy">
                         <map name="map-directions">
                             <area target="_blank" rel="noopener" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
                                 href="https://yandex.by/maps/157/minsk/house/Zk4YcgJoSE0EQFtpfXVwd3xiZQ==/?ll=27.458183%2C53.916011&z=17"
@@ -1151,7 +1151,7 @@
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
                             rel="noopener">Edgar
                             R.N</a></em></p>
-                <img src="img/logo-content.svg?v=8" alt="La Casa de Grei логотип" id="logo-footer">
+                <img src="img/logo-content.svg?v=9" alt="La Casa de Grei логотип" id="logo-footer">
             </div>
             <div class="legal">
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
