--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Casa de Grei - Кубинская школа латиноамериканских танцев в Минске</title>
 
-    <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0"> -->
-
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
@@ -699,8 +695,8 @@
                         <img src="img/festival-placeholder.webp" alt="Участие в фестивале латиноамериканской культуры в
                         Минске" loading="lazy" class="lazy-load">
                     </div>
-                    <a href="https://www.youtube.com/watch?v=7m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
-                    </a>
+                    <!-- <a href="https://www.youtube.com/watch?v=7m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
+                    </a> -->
                 </lite-youtube>
                 <div class="carousel">
                     <div class="carousel-container">
@@ -777,6 +773,7 @@
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
                         </p>
+                        <button class="watch-demo" data-video-id="NsYWJRcVT1I">Смотреть пример</button>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
@@ -784,6 +781,7 @@
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
+                        <button class="watch-demo" data-video-id="I_HreSHnrj0">Смотреть пример</button>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
@@ -792,6 +790,7 @@
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
                             ритмов.</p>
+                        <button class="watch-demo" data-video-id="L7YqNsCbkn8">Смотреть пример</button>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
@@ -800,8 +799,8 @@
                         <h3>Кизомба</h3>
                         <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
                             музыкальности.</p>
+                        <button class="watch-demo" data-video-id="YOUR_KIZOMBA_VIDEO_ID">Смотреть пример</button>
                     </div>
-
                 </div>
             </div>
             <div class="spacer"></div>
@@ -1184,6 +1183,17 @@
                         Расчетный счет: BY97ALFA30132A17830030270000 в BYN ЗАО «Альфа-Банк»<br>БИК: ALFABY2X
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="video-modal" aria-hidden="true">
+            <button class="close-modal" aria-label="Закрыть видео">
+                <svg viewBox="0 0 24 24" width="24" height="24">
+                    <path
+                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                </svg>
+            </button>
+            <div class="modal-content">
+                <!-- lite-youtube element will be injected here -->
             </div>
         </div>
     </footer>
