decrease padding for shorts reproduction

--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
                         <img src="img/info-placeholder.webp" alt="Белорусский кубинец: о любви и билете в Беларусь"
                             loading="lazy" class="lazy-load">
                     </div>
-                    <a href="https://www.youtube.com/watch?v=K1ultgU_QXA" class="lyt-playbtn" title="Play Video">
-                    </a>
+                    <!-- <a href="https://www.youtube.com/watch?v=K1ultgU_QXA" class="lyt-playbtn" title="Play Video">
+                    </a> -->
                 </lite-youtube>
                 <p class="bigger-text">Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</p>
                 <lite-youtube videoid="4m6O2EXk2hE"
