--- a/index.html
+++ b/index.html
@@ -1187,9 +1187,19 @@
         </div>
         <div class="video-modal" aria-hidden="true">
             <button class="close-modal" aria-label="Закрыть видео">
-                <svg viewBox="0 0 24 24" width="24" height="24">
+                <!-- <svg viewBox="0 0 24 24" width="24" height="24">
                     <path
                         d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                </svg> -->
+                <svg width="64px" height="64px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"
+                    fill="#ffffff" stroke="#ffffff" stroke-width="51.2">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <path fill="#ffffff"
+                            d="M195.2 195.2a64 64 0 0 1 90.496 0L512 421.504 738.304 195.2a64 64 0 0 1 90.496 90.496L602.496 512 828.8 738.304a64 64 0 0 1-90.496 90.496L512 602.496 285.696 828.8a64 64 0 0 1-90.496-90.496L421.504 512 195.2 285.696a64 64 0 0 1 0-90.496z">
+                        </path>
+                    </g>
                 </svg>
             </button>
             <div class="modal-content">
